--- a/action.yml
+++ b/action.yml
@@ -36,10 +36,12 @@ runs:
 
     - name: Build the libGDX application
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       run: ./gradlew ios:createIPA
  
     - name: Publish the App on TestFlight
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       if: success()
       env:
         APPLEID_USERNAME: ${{ inputs.apple-id-username }}
