--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,12 @@ runs:
       shell: bash
       run: SIZE=2048 ; diskutil erasevolume HFS+ 'RoboVM RAM Disk' `hdiutil attach -nomount ram://$((SIZE * 2048))`
 
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: 11
+
     - name: Build the libGDX application
       shell: bash
       working-directory: ${{ inputs.working-directory }}
